Meetup #4 Touchups and event options Fixed spacing and re-ordered items. Added multiple options for attending: Youtube Live, ics, Google Calendar

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -83,6 +83,9 @@ aside {
   a {
     text-decoration: underline;
   }
+  div.heading {
+    margin: -1rem 0 1rem;
+  }
   img.discord {
     display: inline;
     height: 1.4rem;
